<resources>
    <string name="app_name">mvp</string>

    <!-- 通用字符串 -->
    <string name="sure">确定</string>
    <string name="cancel">取消</string>

    <!-- 登录注册及实名认证相关 -->
    <string name="login_user_tip">手机号/用户名</string>
    <string name="login_phone_tip">请输入手机号</string>
    <string name="login_pwd_tip">请输入密码</string>
    <string name="login_check_tip">动态验证码</string>
    <string name="login_check_get_btn">点击获取验证码</string>
    <string name="login_check_get_after">%1$d秒后重新获取</string>
    <string name="login_register">注册</string>
    <string name="login_check_in">动态验证码登录</string>
    <string name="login_pwd_in">密码登录</string>
    <string name="login_in">登录</string>
    <string name="login_doing">正在登录</string>
    <string name="login_error_phone_null">手机号不能够为空</string>
    <string name="login_error_name_null">用户名不能够为空</string>
    <string name="login_error_pwd_null">密码不能够为空</string>
    <string name="login_error_check_null">验证码不能够为空</string>
    <string name="sign">注册</string>

    <!-- 主页面 -->
    <string name="main_tab_user">用户</string>
    
    <!-- 个人中心 -->
    <string name="user_settings_title">个人中心</string>
    <string name="user_settings_avatar">头\u3000像\u3000</string>
    <string name="user_settings_phone">手机号\u3000</string>
    <string name="user_settings_name">用户名\u3000</string>
    <string name="user_settings_password">密\u3000码\u3000</string>
    <string name="user_settings_name_title">设置用户名</string>
    <string name="user_settings_name_label">用户名\u3000</string>
    <string name="user_settings_name_hint">请输入用户名</string>
    <string name="user_settings_name_null">用户名不能够为空</string>
    <string name="user_settings_password_title">设置密码</string>
    <string name="user_settings_password_now_label">原密码\u3000</string>
    <string name="user_settings_password_now_hint">请输入原密码</string>
    <string name="user_settings_password_new_label">新密码\u3000</string>
    <string name="user_settings_password_new_hint">请输入新密码</string>
    <string name="user_settings_error_pwd_now_null">原密码不能够为空</string>
    <string name="user_settings_error_pwd_new_null">新密码不能够为空</string>
    <string name="user_settings_success">设置成功</string>
    
    <!-- 图片相关 -->
    <string name="picture_from_take">拍照获取</string>
    <string name="picture_from_album">从相册选择</string>
    <string name="picture_album_title">选择图片</string>
    <string name="image_crop_title">图片裁剪</string>

</resources>
