<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:clear="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <include
            android:id="@+id/layout_title"
            layout="@layout/view_common_title" />

    <LinearLayout
            android:id="@+id/lay_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_title"
            android:orientation="vertical">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_row_height"
                android:layout_marginStart="@dimen/common_page_margin"
                android:layout_marginEnd="@dimen/common_page_margin"
                android:gravity="center_vertical">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CommonTextLabel"
                    android:text="@string/user_settings_name_label"/>
            <com.story.view.input.ClearEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/CommonEditText"
                    android:hint="@string/user_settings_name_hint"
                    clear:clear_et_show_type="clear"/>
        </LinearLayout>
        <View style="@style/CommonLine"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/lay_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_title"
            android:orientation="vertical"
            android:visibility="gone">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_row_height"
                android:layout_marginStart="@dimen/common_page_margin"
                android:layout_marginEnd="@dimen/common_page_margin"
                android:gravity="center_vertical">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CommonTextLabel"
                    android:text="@string/user_settings_password_now_label"/>
            <com.story.view.input.ClearEditText
                    android:id="@+id/et_pwd_now"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/CommonEditText"
                    android:hint="@string/user_settings_password_now_hint"
                    android:inputType="textPassword"
                    clear:clear_et_show_type="password"/>
        </LinearLayout>
        <View style="@style/CommonLine"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_row_height"
                android:layout_marginStart="@dimen/common_page_margin"
                android:layout_marginEnd="@dimen/common_page_margin"
                android:gravity="center_vertical">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/CommonTextLabel"
                    android:text="@string/user_settings_password_new_label"/>
            <com.story.view.input.ClearEditText
                    android:id="@+id/et_pwd_new"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/CommonEditText"
                    android:hint="@string/user_settings_password_new_hint"
                    android:inputType="textPassword"
                    clear:clear_et_show_type="password"/>
        </LinearLayout>
        <View style="@style/CommonLine"/>
    </LinearLayout>

    <Button
            android:id="@+id/btn_sure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/bg_btn_blue"
            android:text="@string/sure"
            android:textColor="@android:color/white"
            android:textSize="22sp"/>

</RelativeLayout>