<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:clear="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/white">

    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/icon"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/app_name"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/ellipse_hollow_blue">

        <com.story.view.input.ClearEditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="40dp"
                android:gravity="center_vertical"
                android:background="@android:color/transparent"
                android:textSize="20sp"
                android:inputType="phone"
                android:maxLength="20"
                android:hint="@string/login_phone_tip"
                android:textColorHint="@color/gray"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                clear:clear_et_show_type="clear"/>

        <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:src="@drawable/login_user"
                android:contentDescription="@string/app_name"/>

    </RelativeLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical">
        <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/ellipse_hollow_blue">

            <com.story.view.input.ClearEditText
                    android:id="@+id/et_check"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="40dp"
                    android:gravity="center_vertical"
                    android:background="@android:color/transparent"
                    android:textSize="20sp"
                    android:inputType="text"
                    android:maxLength="6"
                    android:hint="@string/login_check_tip"
                    android:textColorHint="@color/gray"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    clear:clear_et_show_type="clear"/>

            <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/login_pwd"
                    android:contentDescription="@string/app_name"/>

        </RelativeLayout>
        <Button
                android:id="@+id/btn_check_get"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:background="@drawable/bg_btn_blue"
                android:text="@string/login_check_get_btn"
                android:textColor="@android:color/white"/>
    </LinearLayout>

    <Button
            android:id="@+id/btn_sign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_btn_blue"
            android:text="@string/sign"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:enabled="false"/>

</LinearLayout>