<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:id="@+id/lay_avatar"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="@dimen/common_page_margin"
            android:layout_marginEnd="@dimen/common_page_margin"
            android:gravity="center_vertical">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CommonTextLabel"
                android:text="@string/user_settings_avatar"/>
        <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        <ImageView
                android:id="@+id/img_avatar"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/user_avatar_default"
                android:contentDescription="@string/app_name"/>
        <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginStart="15dp"
                android:src="@drawable/common_more"
                android:contentDescription="@string/app_name"/>
    </LinearLayout>

    <View style="@style/CommonLine"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_row_height"
            android:layout_marginStart="@dimen/common_page_margin"
            android:layout_marginEnd="@dimen/common_page_margin"
            android:gravity="center_vertical">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CommonTextLabel"
                android:text="@string/user_settings_phone"/>
        <TextView
                android:id="@+id/tv_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/CommonTextValue"
                android:gravity="end"/>
        <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginStart="15dp"
                android:src="@drawable/common_more"
                android:visibility="invisible"
                android:contentDescription="@string/app_name"/>
    </LinearLayout>

    <View style="@style/CommonLine"/>

    <LinearLayout
            android:id="@+id/lay_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_row_height"
            android:layout_marginStart="@dimen/common_page_margin"
            android:layout_marginEnd="@dimen/common_page_margin"
            android:gravity="center_vertical">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CommonTextLabel"
                android:text="@string/user_settings_name"/>
        <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/CommonTextValue"
                android:gravity="end"/>
        <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginStart="15dp"
                android:src="@drawable/common_more"
                android:contentDescription="@string/app_name"/>
    </LinearLayout>

    <View style="@style/CommonLine"/>

    <LinearLayout
            android:id="@+id/lay_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_row_height"
            android:layout_marginStart="@dimen/common_page_margin"
            android:layout_marginEnd="@dimen/common_page_margin"
            android:gravity="center_vertical">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CommonTextLabel"
                android:text="@string/user_settings_password"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/CommonTextValue"
                android:gravity="end"/>
        <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginStart="15dp"
                android:src="@drawable/common_more"
                android:contentDescription="@string/app_name"/>
    </LinearLayout>

    <View style="@style/CommonLine"/>

</LinearLayout>